--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     <section class="container section-1">
         <hr />
       <div class="slideShow">
-        <div class="slide"><img src="/img/1.jpg" alt="no picture found" /></div>
-        <div class="slide"><img src="/img/2.jpg" alt="no picture found" /></div>
-        <div class="slide"><img src="/img/3.jpg" alt="no picture found" /></div>
-        <div class="slide"><img src="/img/5.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="./img/1.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="./img/2.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="./img/3.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="./img/5.jpg" alt="no picture found" /></div>
 
         <button class="slider__btn slider__btn--left">&larr;</button>
         <button class="slider__btn slider__btn--right">&rarr;</button>
@@ -103,7 +103,7 @@
         <hr />
       <div class="intro col-12">
         <div class="col-6 introPics">
-          <div><img src="/img/6.png" alt="no picture found" /></div>
+          <div><img src="/img/4.jpg" alt="no picture found" /></div>
         </div>
 
         <div class="introPragraph col-6">
