--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <hr />
       <div class="intro col-12">
         <div class="col-6 introPics">
-          <div><img src="./img/img4.jpg" alt="no picture found" /></div>
+          <div><img src="/img/img4.jpg" alt="no picture found" /></div>
         </div>
 
         <div class="introPragraph col-6">
