--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     <section class="container section-1">
         <hr />
       <div class="slideShow">
-        <div class="slide"><img src="/img/img1.jpg" alt="no picture found" /></div>
-        <div class="slide"><img src="/img/img2.jpg" alt="no picture found" /></div>
-        <div class="slide"><img src="/img/img3.jpg" alt="no picture found" /></div>
-        <div class="slide"><img src="/img/img5.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="img/img1.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="img/img2.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="img/img3.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="img/img5.jpg" alt="no picture found" /></div>
 
         <button class="slider__btn slider__btn--left">&larr;</button>
         <button class="slider__btn slider__btn--right">&rarr;</button>
