--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MONA</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <!-- ***************************** -->
@@ -54,10 +54,10 @@
     <section class="container section-1">
         <hr />
       <div class="slideShow">
-        <div class="slide"><img src="img/img1.jpg" alt="no picture found" /></div>
-        <div class="slide"><img src="img/img2.jpg" alt="no picture found" /></div>
-        <div class="slide"><img src="img/img3.jpg" alt="no picture found" /></div>
-        <div class="slide"><img src="img/img5.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="./img/img1.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="./img/img2.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="./img/img3.jpg" alt="no picture found" /></div>
+        <div class="slide"><img src="./img/img5.jpg" alt="no picture found" /></div>
 
         <button class="slider__btn slider__btn--left">&larr;</button>
         <button class="slider__btn slider__btn--right">&rarr;</button>
@@ -103,7 +103,7 @@
         <hr />
       <div class="intro col-12">
         <div class="col-6 introPics">
-          <div><img src="/img/img4.jpg" alt="no picture found" /></div>
+          <div><img src="./img/img4.jpg" alt="no picture found" /></div>
         </div>
 
         <div class="introPragraph col-6">
